<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="num_of_pax">Num of Pax</string>
    <string name="svs">SVS</string>
    <string name="gst">GST</string>
    <string name="discount">Discount (%)</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="reset">RESET</string>
    <string name="enter_discount">enter discount (if any)</string>
    <string name="enter_amount">enter amount…</string>
    <string name="enter_pax">enter pax…</string>
    <string name="calculate">CALCULATE</string>
    <string name="bill_calculator">Bill Calculator</string>
</resources>