<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount" />

        <EditText
            android:id="@+id/etnAmount"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/enter_amount"
            android:inputType="numberDecimal"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tvPax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/num_of_pax" />

        <EditText
            android:id="@+id/etnPax"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/enter_pax"
            android:inputType="number"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/tbtnService"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textOff="NO SVS"
            android:textOn="@string/svs"
            android:layout_weight="1"/>

        <ToggleButton
            android:id="@+id/tbtnGst"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textOff="NO GST"
            android:textOn="@string/gst"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDiscount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discount" />

        <EditText
            android:id="@+id/etnDiscount"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/enter_discount"
            android:inputType="numberDecimal"
            android:autofillHints="" />

        <RadioGroup
            android:id="@+id/rgPaymentMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbtnCash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash" />

            <RadioButton
                android:id="@+id/rbtnPayNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paynow" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnReset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvTotalBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvTotalBillSplit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>